Fixed whitespace issue

--- a/style.css
+++ b/style.css
@@ -72,3 +72,6 @@ button a {
 	background-color: white;
 	clear: both;
 }
+.white-gap {
+	background-color: white;
+}
